--- a/www/index.html
+++ b/www/index.html
@@ -1,34 +1,88 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+  <link href="css/ionic.app.css" rel="stylesheet">
+  -->
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <!-- ionic/angularjs js -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!-- cordova script (this will be a 404 during development) -->
+  <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+  <style>
+    .scroll {
+      height: 95%;
+      /*vertical-align: middle;*/
+    }
+
+    .slider {
+      height: 95%;
+    }
+
+    .slider-slide {
+      text-align: center;
+    }
+
+    .word{
+      font-size: 3em;
+      line-height: 1.2em;
+    }
+    .description{
+      font-size: 2em;
+      line-height: 1.2em;
+    }
+  </style>
+</head>
+
+<body ng-app="starter">
+
+<ion-pane>
+  <ion-header-bar class="bar-stable">
+    <button class="button button-icon icon ion-home"></button>
+    <h1 class="title">Elokvent</h1>
+    <button class="button button-icon icon ion-navicon"></button>
+  </ion-header-bar>
+
+  <ion-content class="has-subheader">
+
+    <ion-slide-box>
+      <ion-slide>
+        <div class="row row-center" style="height: 75%; ">
+          <div class="col col-center">
+            <!--<strong class="word">nollkupongobligation</strong>-->
+            <strong class="word">konflux</strong>
+          </div>
+        </div>
+      </ion-slide>
+      <ion-slide>
+        <div class="row row-center" style="height: 75%; ">
+          <div class="col col-center">
+            <div class="description">
+              konstant förändring
+            </div>
+          </div>
+        </div>
+      </ion-slide>
+    </ion-slide-box>
+
+  </ion-content>
+
+  <div class="bar bar-footer bar-stable">
+      <a class="button icon-left ion-chevron-left button-clear button-dark">Föregående</a>
+      <a class="button icon-right ion-chevron-right button-clear button-dark">Nästa</a>
+  </div>
+</ion-pane>
+</body>
 </html>
