Getting 10+ words from pxWords service

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
   <!-- your app's js -->
   <script src="app.js"></script>
   <script src="modules/elokventModules.js"></script>
+  <script src="comm/commModule.js"></script>
+  <script src="comm/wordsService.js"></script>
   <script src="modules/footer/footerController.js"></script>
   <script src="modules/main/mainController.js"></script>
   <script src="modules/word/wordController.js"></script>
@@ -48,7 +50,7 @@
   </ion-header-bar>
 
   <ion-content>
-    <ion-nav-view style="background-color: #0a9dc7"></ion-nav-view>
+    <ion-nav-view></ion-nav-view>
   </ion-content>
 
   <div class="bar bar-footer bar-stable" ng-controller="FooterController as FooterCtrl"
