--- a/www/modules/settings/settings.html
+++ b/www/modules/settings/settings.html
@@ -1,4 +1,4 @@
-<div style="background-color: #0a9dc7; height:100%">
+<div style="background-color: #cce5ff; height:100%">
   <p>Settings</p>
   <p>Title: {{SettingsCtrl.title}}</p>
 </div>
