--- a/www/modules/word/word.html
+++ b/www/modules/word/word.html
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="./modules/word/word.css">
 
 
-<ion-slide-box class="has-footer" style="background-color: #cccccc">
+<ion-slide-box class="has-footer background">
   <ion-slide>
     <div class="row row-center" style="height: 100%; ">
       <div class="col col-center">
         <!--<strong class="word">nollkupongobligation</strong>-->
-        <strong class="word">konflux</strong>
+        <strong class="word">{{WordCtrl.currentWord.word}}</strong>
       </div>
     </div>
   </ion-slide>
@@ -14,7 +14,7 @@
     <div class="row row-center" style="height: 100%; ">
       <div class="col col-center">
         <div class="description">
-          konstant förändring
+          {{WordCtrl.currentWord.description}}
         </div>
       </div>
     </div>
