Older and newer arrows in footer work

--- a/www/index.html
+++ b/www/index.html
@@ -56,8 +56,11 @@
   <div class="bar bar-footer bar-stable" ng-controller="FooterController as FooterCtrl"
        ng-if="MainCtrl.showFooterWordNav">
     <a class="button icon-left ion-chevron-left button-clear button-dark"
-       ng-class="{disabled : FooterCtrl.isForegaendeDisabled()}">Föregående</a>
-    <a class="button icon-right ion-chevron-right button-clear button-dark">Nästa</a>
+       ng-class="{disabled : FooterCtrl.isForegaendeDisabled()}"
+       ng-click="FooterCtrl.showPreviousWord()">Äldre</a>
+    <a class="button icon-right ion-chevron-right button-clear button-dark"
+       ng-class="{disabled : FooterCtrl.isNastaDisabled()}"
+       ng-click="FooterCtrl.showNextWord()">Nyare</a>
   </div>
 </ion-pane>
 </body>
