--- a/www/modules/word/word.html
+++ b/www/modules/word/word.html
@@ -6,7 +6,7 @@
     <div class="row row-center" style="height: 100%; ">
       <div class="col col-center">
         <!--<strong class="word">nollkupongobligation</strong>-->
-        <strong class="word">{{WordCtrl.currentWord.word}}</strong>
+        <strong class="word">{{WordCtrl.pxWordsService.currentWord.word}}</strong>
       </div>
     </div>
   </ion-slide>
@@ -14,7 +14,7 @@
     <div class="row row-center" style="height: 100%; ">
       <div class="col col-center">
         <div class="description">
-          {{WordCtrl.currentWord.description}}
+          {{WordCtrl.pxWordsService.currentWord.description}}
         </div>
       </div>
     </div>
