--- a/www/modules/word/word.html
+++ b/www/modules/word/word.html
@@ -1,6 +1,5 @@
 <link rel="stylesheet" href="./modules/word/word.css">
 
-
 <ion-slide-box class="has-footer background">
   <ion-slide>
     <div class="row row-center" style="height: 100%; ">
@@ -8,7 +7,7 @@
         <!--<strong class="word">nollkupongobligation</strong>-->
         <strong class="word">{{WordCtrl.pxWordsService.currentWord.word}}</strong>
       </div>
-    </div>
+      </div>
   </ion-slide>
   <ion-slide>
     <div class="row row-center" style="height: 100%; ">
@@ -16,8 +15,9 @@
         <div class="description">
           {{WordCtrl.pxWordsService.currentWord.description}}
         </div>
+        </div>
       </div>
-    </div>
   </ion-slide>
 </ion-slide-box>
 
+<ui-view name="footer"></ui-view>
