Using settings view via pxSettings service

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
   <script src="modules/elokventModules.js"></script>
   <script src="comm/commModule.js"></script>
   <script src="comm/wordsService.js"></script>
+  <script src="comm/settingsService.js"></script>
   <script src="modules/footer/footerController.js"></script>
   <script src="modules/main/mainController.js"></script>
   <script src="modules/word/wordController.js"></script>
