Slider's pager icons work

--- a/www/modules/word/word.html
+++ b/www/modules/word/word.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="./modules/word/word.css">
 
-<ion-slide-box class="has-footer background">
+<ion-slide-box class="has-footer background" pager-click="WordCtrl.slideWordDescription(index)">
   <ion-slide>
     <div class="row row-center" style="height: 100%; ">
       <div class="col col-center">
