--- a/www/modules/settings/settings.html
+++ b/www/modules/settings/settings.html
@@ -10,7 +10,7 @@
           Nytt ord
         </div>
 
-        <select ng-model="SettingsCtrl.newWordInterval"
+        <select ng-model="SettingsCtrl.data.newWordInterval"
                 ng-change="SettingsCtrl.saveSettings()">
           <option value="daily">varje dag</option>
           <option value="biDaily">varannan dag</option>
@@ -23,7 +23,7 @@
           Klockan
         </div>
 
-        <select ng-model="SettingsCtrl.newWordTime"
+        <select ng-model="SettingsCtrl.data.newWordTime"
                 ng-change="SettingsCtrl.saveSettings()">
           <option value="5">5:00</option>
           <option value="6">6:00</option>
@@ -47,7 +47,7 @@
         </select>
       </label>
 
-      <!--<ion-toggle ng-model="SettingsCtrl.pushNotifications"-->
+      <!--<ion-toggle ng-model="SettingsCtrl.data.pushNotifications"-->
       <!--ng-change="SettingsCtrl.saveSettings()"-->
       <!--toggle-class="toggle-calm">-->
       <!--Push notifiering-->
